Fixed Submit Button Alignment issue

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -931,3 +931,15 @@ div.issue .attribute .value {
   border-block-end: 1px solid var(--ds-border, #c0c0c0);
   background: #c0d9ff;
 }
+
+@media screen and (min-width: 900px) {
+  .mobile-show {
+    display: none !important;
+  }
+}
+
+@media screen and (max-width: 899px) {
+  .mobile-hide {
+    display: none !important;
+  }
+}
